--- a/WWDC Scholars 2015/WWDC Scholars 2015/Main.storyboard
+++ b/WWDC Scholars 2015/WWDC Scholars 2015/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E26a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Gyk-Wj-uBM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Gyk-Wj-uBM">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
@@ -5882,7 +5882,7 @@ Two times at WWDC!</string>
                                     </mask>
                                 </variation>
                                 <connections>
-                                    <segue destination="j7n-CZ-1V0" kind="presentation" modalTransitionStyle="crossDissolve" id="DyR-D1-yrL"/>
+                                    <segue destination="j7n-CZ-1V0" kind="presentation" identifier="toCredits" id="DyR-D1-yrL"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="navigationBarLandscape" translatesAutoresizingMaskIntoConstraints="NO" id="DkA-eO-FKa">
@@ -6522,7 +6522,7 @@ Two times at WWDC!</string>
                                     </mask>
                                 </variation>
                                 <connections>
-                                    <segue destination="j7n-CZ-1V0" kind="presentation" modalTransitionStyle="crossDissolve" id="EyO-Cu-GgD"/>
+                                    <segue destination="j7n-CZ-1V0" kind="presentation" identifier="toCredits" id="EyO-Cu-GgD"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wwdcscholars" translatesAutoresizingMaskIntoConstraints="NO" id="jd6-Qe-8fv">
@@ -6950,7 +6950,7 @@ Two times at WWDC!</string>
                             </scrollView>
                             <pageControl hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="gBZ-hX-PFk">
                                 <rect key="frame" x="280" y="555" width="39" height="37"/>
-                                <color key="pageIndicatorTintColor" patternImage="C7B99C52-A168-43B9-AC7C-7A22ADB953DE" colorSpace="pattern"/>
+                                <color key="pageIndicatorTintColor" patternImage="E8C89ACA-BDAD-48D5-9EF0-CFA316DF3E0C" colorSpace="pattern"/>
                                 <color key="currentPageIndicatorTintColor" red="0.0" green="0.0" blue="0.66825143909999996" alpha="1" colorSpace="calibratedRGB"/>
                             </pageControl>
                         </subviews>
@@ -6982,7 +6982,11 @@ Two times at WWDC!</string>
         <image name="AlexanderZimin" width="83" height="83"/>
         <image name="AmanJain" width="83" height="83"/>
         <image name="AndrewWalker" width="83" height="83"/>
-        <image name="C7B99C52-A168-43B9-AC7C-7A22ADB953DE" width="512" height="512">
+        <image name="CharleyHutchison" width="83" height="83"/>
+        <image name="CloseButton" width="35" height="35"/>
+        <image name="Data" width="60" height="59"/>
+        <image name="DividingLine" width="1" height="1"/>
+        <image name="E8C89ACA-BDAD-48D5-9EF0-CFA316DF3E0C" width="512" height="512">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -24532,10 +24536,6 @@ EA65ABAOwQAQDs4AEA7TABAO1QAQDtcAEA7cABAO5AAQDucAEA7sABAO9AAQDvcAEA8JABAPDAAQDxEA
 AAAAAAAEAQAAAAAAAABCAAAAAAAAAAAAAAAAABAPEw
 </mutableData>
         </image>
-        <image name="CharleyHutchison" width="83" height="83"/>
-        <image name="CloseButton" width="35" height="35"/>
-        <image name="Data" width="60" height="59"/>
-        <image name="DividingLine" width="1" height="1"/>
         <image name="GautamMittal250" width="83" height="83"/>
         <image name="GreyChen" width="83" height="86"/>
         <image name="HarshitaGupta" width="83" height="83"/>
@@ -24573,7 +24573,7 @@ AAAAAAAEAQAAAAAAAABCAAAAAAAAAAAAAAAAABAPEw
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="iL3-5n-g4p"/>
+        <segue reference="DyR-D1-yrL"/>
         <segue reference="dZ8-0W-jxb"/>
-        <segue reference="EyO-Cu-GgD"/>
     </inferredMetricsTieBreakers>
 </document>
