--- a/WWDC Scholars 2015/WWDC Scholars 2015/Main.storyboard
+++ b/WWDC Scholars 2015/WWDC Scholars 2015/Main.storyboard
@@ -26,18 +26,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S6w-cg-8hD" customClass="TPKeyboardAvoidingScrollView">
+                                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S6w-cg-8hD" customClass="TPKeyboardAvoidingScrollView">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6rY-Gj-w3T">
-                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                                                    <state key="normal">
-                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
-                                                    <connections>
-                                                        <action selector="closeButtonPressed:" destination="guk-jL-bKW" eventType="touchUpInside" id="YsM-lK-b4R"/>
-                                                    </connections>
-                                                </button>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="URD-qi-aeU" customClass="DesignableView" customModule="WWDC_Scholars_2015" customModuleProvider="target">
                                                     <rect key="frame" x="160" y="160" width="280" height="280"/>
                                                     <subviews>
@@ -124,13 +115,7 @@
                                                 </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="6rY-Gj-w3T" firstAttribute="leading" secondItem="S6w-cg-8hD" secondAttribute="leading" id="5P4-EK-AUW"/>
-                                                <constraint firstItem="6rY-Gj-w3T" firstAttribute="top" secondItem="S6w-cg-8hD" secondAttribute="top" id="BCE-Is-LjQ"/>
                                                 <constraint firstAttribute="centerY" secondItem="URD-qi-aeU" secondAttribute="centerY" id="M4b-nH-LGA"/>
-                                                <constraint firstAttribute="bottom" secondItem="6rY-Gj-w3T" secondAttribute="bottom" id="Vj2-cZ-jFl"/>
-                                                <constraint firstItem="URD-qi-aeU" firstAttribute="centerX" secondItem="6rY-Gj-w3T" secondAttribute="centerX" id="bqv-uF-Pvf"/>
-                                                <constraint firstItem="URD-qi-aeU" firstAttribute="centerY" secondItem="6rY-Gj-w3T" secondAttribute="centerY" id="gpN-WG-uMp"/>
-                                                <constraint firstAttribute="trailing" secondItem="6rY-Gj-w3T" secondAttribute="trailing" id="hZ2-p0-br5"/>
                                                 <constraint firstAttribute="centerX" secondItem="URD-qi-aeU" secondAttribute="centerX" id="olb-EV-adT"/>
                                             </constraints>
                                             <connections>
@@ -171,6 +156,7 @@
                 <tapGestureRecognizer id="rAs-CN-5SB">
                     <connections>
                         <action selector="scrollViewPressed:" destination="guk-jL-bKW" id="MLX-YG-ugS"/>
+                        <segue destination="xRy-lK-QCM" kind="unwind" unwindAction="unwindToViewController:" id="zpA-cR-Dpl"/>
                     </connections>
                 </tapGestureRecognizer>
                 <customObject id="AfY-xJ-G4p" customClass="DragDropBehavior" customModule="WWDC_Scholars_2015" customModuleProvider="target">
@@ -6950,7 +6936,7 @@ Two times at WWDC!</string>
                             </scrollView>
                             <pageControl hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="gBZ-hX-PFk">
                                 <rect key="frame" x="280" y="555" width="39" height="37"/>
-                                <color key="pageIndicatorTintColor" patternImage="E8C89ACA-BDAD-48D5-9EF0-CFA316DF3E0C" colorSpace="pattern"/>
+                                <color key="pageIndicatorTintColor" patternImage="0D9DEBAA-C51C-4A13-9C41-81A12F0EC08E" colorSpace="pattern"/>
                                 <color key="currentPageIndicatorTintColor" red="0.0" green="0.0" blue="0.66825143909999996" alpha="1" colorSpace="calibratedRGB"/>
                             </pageControl>
                         </subviews>
@@ -6979,14 +6965,7 @@ Two times at WWDC!</string>
         </scene>
     </scenes>
     <resources>
-        <image name="AlexanderZimin" width="83" height="83"/>
-        <image name="AmanJain" width="83" height="83"/>
-        <image name="AndrewWalker" width="83" height="83"/>
-        <image name="CharleyHutchison" width="83" height="83"/>
-        <image name="CloseButton" width="35" height="35"/>
-        <image name="Data" width="60" height="59"/>
-        <image name="DividingLine" width="1" height="1"/>
-        <image name="E8C89ACA-BDAD-48D5-9EF0-CFA316DF3E0C" width="512" height="512">
+        <image name="0D9DEBAA-C51C-4A13-9C41-81A12F0EC08E" width="512" height="512">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -24536,6 +24515,13 @@ EA65ABAOwQAQDs4AEA7TABAO1QAQDtcAEA7cABAO5AAQDucAEA7sABAO9AAQDvcAEA8JABAPDAAQDxEA
 AAAAAAAEAQAAAAAAAABCAAAAAAAAAAAAAAAAABAPEw
 </mutableData>
         </image>
+        <image name="AlexanderZimin" width="83" height="83"/>
+        <image name="AmanJain" width="83" height="83"/>
+        <image name="AndrewWalker" width="83" height="83"/>
+        <image name="CharleyHutchison" width="83" height="83"/>
+        <image name="CloseButton" width="35" height="35"/>
+        <image name="Data" width="60" height="59"/>
+        <image name="DividingLine" width="1" height="1"/>
         <image name="GautamMittal250" width="83" height="83"/>
         <image name="GreyChen" width="83" height="86"/>
         <image name="HarshitaGupta" width="83" height="83"/>
